--- a/css/styles.css
+++ b/css/styles.css
@@ -23,11 +23,29 @@
   --color-grey: #2e2f42;
   --indent: 24px;
   --item: 3;
+
+  --trns-durat: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+/* Animations */
+
+@keyframes move-top {
+  0% {
+    transform: translateY(150px);
+    opacity: 0;
+  }
+  50% {
+    opacity: 0.6;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
 }
 
 /**
   |============================
-  | ======COMPONENTS=========
+  | =======COMPONENTS=========
   |============================
 */
 
@@ -151,12 +169,26 @@ img {
   margin-right: 40px;
 }
 
+.header-link.header-current::after {
+  display: block;
+  position: absolute;
+  bottom: 0;
+  content: '';
+  width: 100%;
+  height: 4px;
+  background: #404bbf;
+  border-radius: 2px;
+}
+
 .header-link {
+  position: relative;
   padding-top: 24px;
   padding-bottom: 24px;
   font-weight: 500;
   line-height: calc(24 / 16);
   color: var(--primary-txt-navy-blue);
+
+  transition: color var(--trns-durat);
 }
 
 .header-link:hover,
@@ -186,6 +218,7 @@ img {
   font-style: normal;
   line-height: calc(24 / 16);
   color: var(--secondary-txt-slate);
+  transition: color var(--trns-durat);
 }
 
 /**
@@ -248,6 +281,8 @@ img {
   border-radius: 4px;
   border: none;
   cursor: pointer;
+
+  transition: background-color var(--trns-durat);
 }
 
 .hero-btn-txt:hover,
@@ -391,6 +426,8 @@ img {
   background-color: var(--accent-txt-iris);
   border-radius: 50%;
   fill: var(--color-cloud);
+
+  transition: background-color var(--trns-durat);
 }
 
 .avatar-social-link:hover,
@@ -432,6 +469,7 @@ img {
   border-radius: 4px;
 
   fill: var(--color-light-slate);
+  transition: border-color var(--trns-durat);
 }
 
 .customers-link:hover,
@@ -445,6 +483,7 @@ img {
 }
 
 .customers-icon {
+  transition: fill var(--trns-durat);
 }
 
 /**
@@ -514,6 +553,8 @@ img {
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
   fill: var(--color-cloud);
+
+  transition: background-color var(--trns-durat);
 }
 .footer-social-link:hover,
 .footer-social-link:focus {
@@ -521,6 +562,69 @@ img {
 }
 
 .footer-social-icon {
+}
+
+/**
+  |============================
+  | !!! Modal window !!!
+  |============================
+*/
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(46, 47, 66, 0.4);
+  z-index: 100;
+
+  transition: opacity var(--trns-durat), visibility var(--trns-durat);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 408px;
+  min-height: 576px;
+  background: #fcfcfc;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+
+  transition: transform var(--trns-durat), opacity var(--trns-durat);
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -70%);
+  opacity: 0;
+}
+
+.modal-btn {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  width: 24px;
+  height: 24px;
+  top: 24px;
+  right: 24px;
+  border-radius: 50%;
+  background: var(--color-cornflower);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.modal-icon {
+  fill: #000000;
 }
 
 /**
@@ -560,6 +664,8 @@ img {
 
   background-color: var(--color-cloud);
   cursor: pointer;
+  transition: color var(--trns-durat), background-color var(--trns-durat),
+    box-shadow var(--trns-durat);
 }
 
 .list-btn:hover,
@@ -584,26 +690,52 @@ img {
   flex-basis: calc((100% - var(--indent) * (var(--item) - 1)) / var(--item));
   border: 1px solid var(--color-cornflower);
   background: var(--liht-txt-fff);
+
+  transition: border var(--trns-durat), box-shadow var(--trns-durat);
 }
 
-.portfolio-item:hover,
-.portfolio-item:focus {
+.portfolio-link:hover,
+.portfolio-link:focus {
   border: 1px solid var(--color-cloud);
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
-/* .portfolio-item {
-  flex-basis: calc((100% - var(--indent) * (var(--item) - 1)) / var(--item));
-} */
+.portfolio-link:hover .overlay,
+.portfolio-link:focus .overlay {
+  transform: translate(0, 0);
+}
 
-/* .portfolio-item:not(:nth-child(3n)) {
-  margin-right: 24px;
-} */
+.portfolio-link {
+  display: block;
+}
 
-/* .portfolio-item:not(:nth-last-child(-n + 3)) {
-  margin-bottom: 24px;
-} */
+.portfolio-box-overlay {
+  position: relative;
+  overflow: hidden;
+}
+
+.overlay {
+  position: absolute;
+  overflow-y: scroll;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  transform: translate(0, 100%);
+  transition: transform var(--trns-durat);
+
+  padding-top: 40px;
+  padding-right: 32px;
+  padding-bottom: 164px;
+  padding-left: 32px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: calc(24 / 16);
+  letter-spacing: 0.02em;
+  background-color: var(--color-iris);
+  color: var(--color-cloud);
+}
 
 .portfolio-wrapper {
   padding: 32px 16px;
